home.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment1
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: shivampandhare/home-page:1
        ports:
        - containerPort: 80
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service1
spec:
  type: NodePort
  selector:
      app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
...
